# IGameRegistry

./: Cargo.toml  build.rs  example.yaml  igame_registry.exe.manifest
.github/workflows/: compile.yaml
src/: data.rs  main.rs
src/utils/: mod.rs  os_reg.rs  replace.rs
