# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "igame-registry"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "添加注册表"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
winreg = "0.10.1"
anyhow = "1.0.58"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
hex = "0.4.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
