# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "igame-registry"
version = "0.1.1"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "igame_registry"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"

[dependencies]
winreg = "0.10.1"
anyhow = "1.0.62"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
hex = "0.4.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
